--- a/Pipfile
+++ b/Pipfile
@@ -9,6 +9,7 @@ scrapy-sentry = "*"
 city-scrapers-core = {extras = ["azure"], version = "*"}
 pypiwin32 = {version = "*", sys_platform = "== 'win32'"}
 scrapy-wayback-middleware = "*"
+python-dateutil = "*"
 
 [dev-packages]
 freezegun = "*"
