use Git version of core dependency
Revert "use Git version of core dependency"

This reverts commit 3f04de025b78163622288687a302f58b46107a16.

--- a/Pipfile
+++ b/Pipfile
@@ -6,7 +6,7 @@ name = "pypi"
 [packages]
 scrapy = "*"
 scrapy-sentry = "*"
-city-scrapers-core = {extras = ["azure"], version = "*"}
+city-scrapers-core = {ref = "main", git = "https://github.com/City-Bureau/city-scrapers-core.git"}
 pypiwin32 = {version = "*", sys_platform = "== 'win32'"}
 scrapy-wayback-middleware = "*"
 python-dateutil = "*"
