--- a/Pipfile
+++ b/Pipfile
@@ -11,6 +11,7 @@ pypiwin32 = {version = "*", sys_platform = "== 'win32'"}
 scrapy-wayback-middleware = "*"
 python-dateutil = "*"
 isort = "*"
+importlib-resources = "*"
 
 [dev-packages]
 freezegun = "*"
