--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,7 +15,7 @@ jobs:
     strategy:
       max-parallel: 4
       matrix:
-        python-version: [3.8, 3.9, "3.10"]
+        python-version: [3.9]
 
     steps:
       - uses: actions/checkout@v1
@@ -28,14 +28,14 @@ jobs:
       - name: Install Pipenv
         uses: dschep/install-pipenv-action@v1
 
-      - name: Cache Python dependencies
-        uses: actions/cache@v1
-        with:
-          path: .venv
-          key: pip-${{ matrix.python-version }}-${{ hashFiles('**/Pipfile.lock') }}
-          restore-keys: |
-            pip-${{ matrix.python-version }}-
-            pip-
+      # - name: Cache Python dependencies
+      #   uses: actions/cache@v1
+      #   with:
+      #     path: .venv
+      #     key: pip-${{ matrix.python-version }}-${{ hashFiles('**/Pipfile.lock') }}
+      #     restore-keys: |
+      #       pip-${{ matrix.python-version }}-
+      #       pip-
 
       - name: Install dependencies
         run: pipenv sync --dev
